Expanding textareas is now working

--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -620,7 +620,10 @@
 						</div>
 					</div>
 					<div class="aspect_details_label" data-i18n="details">Details</div>
-					<textarea spellcheck="false" name="attr_aspect_details_input" class="aspect_details_input" cols="7" rows="2"></textarea>  
+					<div class="auto-expand aspect_details_container standard_text">
+						<span name="attr_aspect_details_input" style="grid-area: 1 / 1 / 2 / 2;"></span>
+						<textarea spellcheck="false" name="attr_aspect_details_input" class="aspect_details_input" cols="7" rows="2" style="grid-area: 1 / 1 / 2 / 2;"></textarea>  
+					</div>
 				</div>
 			</fieldset>
 		</div>
@@ -682,7 +685,10 @@
 						</div>
 					</div>
 					<div class="aspect_details_label" data-i18n="details">Details</div>
-					<textarea spellcheck="false" name="attr_temp_aspect_details_input" class="aspect_details_input" cols="7" rows="2"></textarea>  
+					<div class="auto-expand aspect_details_container standard_text">
+						<span name="attr_temp_aspect_details_input" style="grid-area: 1 / 1 / 2 / 2;"></span>
+						<textarea spellcheck="false" name="attr_temp_aspect_details_input" class="aspect_details_input" cols="7" rows="2" style="grid-area: 1 / 1 / 2 / 2;"></textarea>  
+					</div>
 				</div>
 			</fieldset>
 		</div>
@@ -1033,7 +1039,10 @@
 						</div>
 					</div>
 					<div class="aspect_details_label" data-i18n="details">Details</div>
-					<textarea spellcheck="false" name="attr_crew_details_input" class="aspect_details_input" cols="7" rows="2"></textarea> 
+					<div class="auto-expand aspect_details_container standard_text">
+						<span name="attr_crew_details_input" style="grid-area: 1 / 1 / 2 / 2;"></span>
+						<textarea spellcheck="false" name="attr_crew_details_input" class="aspect_details_input" cols="7" rows="2" style="grid-area: 1 / 1 / 2 / 2;"></textarea> 
+					</div>
 				</div>
 			</fieldset>
 		</div>
