Note and other info auto-expand

--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -119,7 +119,10 @@
 			</div>
 			<div class="char_bg_other">
 				<span data-i18n="other-notes">Other Notes:</span>
-				<textarea spellcheck="false" class="freeform" name="attr_other_background" cols="30" rows="5"></textarea>
+				<div class="auto-expand standard_text">
+					<span class="standard_text" name="attr_other_background" style="grid-area: 1 / 1 / 2 / 2;"></span>
+					<textarea spellcheck="false" class="freeform" name="attr_other_background" cols="30" rows="5" style="grid-area: 1 / 1 / 2 / 2;"></textarea>
+				</div>
 			</div>
 		</div>
 		<div class="milestones">
@@ -1071,7 +1074,10 @@
 			<div class="panel_title">
 				<h2 data-i18n="notes">NOTES</h2>
 			</div>
-			<textarea spellcheck="false" name="attr_ship_notes" class="freeform" cols="7" rows="10"></textarea>
+			<div class="auto-expand standard_text">
+				<span class="standard_text" name="attr_ship_notes" style="grid-area: 1 / 1 / 2 / 2;"></span>
+				<textarea spellcheck="false" name="attr_ship_notes" class="freeform" cols="7" rows="10" style="grid-area: 1 / 1 / 2 / 2;"></textarea>
+			</div>
 		</div>
 	</div>
 </div>
